# Local-STT-CLI

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirments.txt
src/local_stt/: cli.py  stt.py
src/local_stt/model/: README.md
