[build-system]
requires = ["setuptools>=61", "poetry-core>=2.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "local-stt"
version = "0.1.1"
description = "Offline Speech-to-Text tool using Vosk"
readme = "README.md"
requires-python = ">=3.12,<4.0"
authors = [
    { name = "Ibtesam Mahmood", email = "ibtesam.mahmood2@gmail.com" }
]
dependencies = [
    "vosk>=0.3.45,<0.4.0",
    "argparse>=1.4.0,<2.0.0",
    "tqdm (>=4.67.1,<5.0.0)"
]

[project.scripts]
localstt = "local_stt.cli:main"

[tool.setuptools]
packages = ["local_stt"]
package-dir = { "" = "src" }

[tool.setuptools.exclude-package-data]
local_stt = ["model/vosk-model-en-us-0.42-gigaspeech/**"]

[tool.poetry]
name = "local-stt"
version = "0.1.1"
description = "Offline Speech-to-Text tool using Vosk"
authors = ["Ibtesam Mahmood <ibtesam.mahmood2@gmail.com>"]
packages = [{ include = "local_stt", from = "src" }]

[tool.poetry.scripts]
localstt = "local_stt.cli:main"
